# armadillo-debian

./: .gitattributes  CMakeLists.txt  CREDITS.txt  INSTALLATION.txt  LICENSE.txt  README.txt  README.txt~  armadillo-2.2.5.tar.gz.delta  armadillo-2.2.5.tar.gz.id  armadillo_0.6.12.orig.tar.gz.delta  armadillo_0.6.12.orig.tar.gz.id  armadillo_0.6.2.orig.tar.gz.delta  armadillo_0.6.2.orig.tar.gz.id  armadillo_0.8.0.orig.tar.gz.delta  armadillo_0.8.0.orig.tar.gz.id  armadillo_0.8.2.orig.tar.gz.delta  armadillo_0.8.2.orig.tar.gz.id  armadillo_0.9.0.orig.tar.gz.delta  armadillo_0.9.0.orig.tar.gz.id  armadillo_0.9.2.orig.tar.gz.delta  armadillo_0.9.2.orig.tar.gz.id  armadillo_0.9.4.orig.tar.gz.delta  armadillo_0.9.4.orig.tar.gz.id  armadillo_1.0.0.orig.tar.gz.delta  armadillo_1.0.0.orig.tar.gz.id  armadillo_1.1.2.orig.tar.gz.delta  armadillo_1.1.4+dfsg.orig.tar.gz.delta  armadillo_1.1.4+dfsg.orig.tar.gz.id  armadillo_1.1.92+dfsg.orig.tar.gz.delta  armadillo_1.1.92+dfsg.orig.tar.gz.id  armadillo_1.99.2+dfsg.orig.tar.gz.delta  armadillo_1.99.2+dfsg.orig.tar.gz.id  armadillo_1.99.3+dfsg.orig.tar.gz.delta  armadillo_1.99.3+dfsg.orig.tar.gz.id  armadillo_10.1.0+dfsg.orig.tar.xz.delta  armadillo_10.1.0+dfsg.orig.tar.xz.id  armadillo_10.1.2+dfsg.orig.tar.xz.delta  armadillo_10.6.2+dfsg.orig.tar.xz.delta  armadillo_10.6.2+dfsg.orig.tar.xz.id  armadillo_10.7.4+dfsg.orig.tar.xz.delta  (+124 more)
build_aux/: cleanup.sh
build_aux/cmake/Modules/: ARMA_FindBLAS.cmake  ARMA_FindCBLAS.cmake  ARMA_FindCLAPACKATLAS.cmake  ARMA_FindLAPACK.cmake  ARMA_FindMKL.cmake
build_aux/doxygen/: doxygen.config  main.doxy
build_aux/rpm/: armadillo.spec
debian/: changelog  control  copyright  dfsg-repack.sh  libarmadillo-dev.docs  libarmadillo-dev.install  libarmadillo-doc.doc-base  libarmadillo-doc.install  libarmadillo0.install  libarmadillo10.docs  libarmadillo6.docs  rules  watch
debian/patches/: armadillo_pinv_bugfix.patch  armadillo_princomp_bugfix.patch  armadillo_rcond_bugfix.patch  armadillo_sign_bugfix.patch  armadillo_spdiag_bugfix.patch  band_matrix_fix.patch  conv_alias_fix.patch  no_lib64.diff  series
docs/: index.html
docs_tech/: a00001.html  a00002.html  a00003.html  a00004.html  a00005.html  a00006.html  a00007.html  a00008.html  a00009.html  a00010.html  a00011.html  a00012.html  a00013.html  a00014.html  a00015.html  a00016.html  a00017.html  a00018.html  a00019.html  a00020.html  a00021.html  a00022.html  a00023.html  a00024.html  a00025.html  a00026.html  a00027.html  a00028.html  a00029.html  a00030.html  a00031.html  a00032.html  a00033.html  a00034.html  a00035.html  a00036.html  a00037.html  a00038.html  a00039.html  a00040.html  (+3262 more)
docs_user/: index.html
examples/: Makefile  Makefile.cmake  Makefile.linux  Makefile.macos  README.txt  example1.cpp  example2.cpp  example_lsq.cpp
include/: armadillo
include/armadillo_bits/: Base.hpp  BaseCube.hpp  Col_meat.hpp  Col_proto.hpp  Cube_meat.hpp  Cube_proto.hpp  GlueCube_meat.hpp  GlueCube_proto.hpp  Glue_meat.hpp  Glue_proto.hpp  Mat_meat.hpp  Mat_proto.hpp  OpCube_meat.hpp  OpCube_proto.hpp  Op_meat.hpp  Op_proto.hpp  Proxy.hpp  ProxyCube.hpp  Row_meat.hpp  Row_proto.hpp  arma_ostream_meat.hpp  arma_ostream_proto.hpp  auxlib_meat.hpp  cmath_wrap.hpp  compiler_setup.hpp  config.hpp  config.hpp.cmake  constants.hpp  debug.hpp  diagview_meat.hpp  diskio_meat.hpp  diskio_proto.hpp  eGlueCube_meat.hpp  eGlueCube_proto.hpp  eGlue_meat.hpp  eGlue_proto.hpp  eOpCube_meat.hpp  eOpCube_proto.hpp  eOp_meat.hpp  eOp_proto.hpp  (+153 more)
src/include/: armadillo
src/include/armadillo_bits/: access.hpp  arma_base.hpp  atlas_proto.hpp  auxlib_meat.hpp  auxlib_proto.hpp  basic_colvec_meat.hpp  basic_colvec_proto.hpp  basic_mat_meat.hpp  basic_mat_proto.hpp  basic_rowvec_meat.hpp  basic_rowvec_proto.hpp  config.hpp  config.hpp.cmake  constants.hpp  debug.hpp  diagview_meat.hpp  diagview_proto.hpp  diskio_meat.hpp  diskio_proto.hpp  field_meat.hpp  field_proto.hpp  fn_accu.hpp  fn_chol.hpp  fn_conv_to.hpp  fn_det.hpp  fn_diagmat.hpp  fn_dot.hpp  fn_eig.hpp  fn_htrans.hpp  fn_inv.hpp  fn_lu.hpp  fn_max.hpp  fn_mean.hpp  fn_median.hpp  fn_min.hpp  fn_misc.hpp  fn_norm.hpp  fn_ones.hpp  fn_qr.hpp  fn_rand.hpp  (+98 more)
